--- a/app/notes/notes.html
+++ b/app/notes/notes.html
@@ -1,3 +1,15 @@
-<p>
-  {{ message }}
-</p>
+<div class="container">
+  <div class="row">
+    <nav class="col-xs-4" id="sidebar">
+      <button class="btn btn-default">
+        New Note
+      </button>
+      <ul>
+        <li ng-repeat="note in notes track by $index">
+          {{note.title}} {{note.body}}
+        </li>
+      </ul>
+    </nav>
+    <main class="col-xs-8" ui-view></main>
+  </div>
+</div>
