Posting to the API works now.

--- a/app/notes/notes-form.html
+++ b/app/notes/notes-form.html
@@ -12,7 +12,7 @@
   </p>
   <p>
     <textarea
-      ng-model = "note.body"
+      ng-model = "note.body_html"
       name="body_html"
       placeholder="Just start typing..."
       required
