The button will now change depending on the type of note, either either new note or update.

--- a/app/notes/notes-form.html
+++ b/app/notes/notes-form.html
@@ -22,7 +22,7 @@
     <input
       type="submit"
       name="commit"
-      value="Save"
+      value="{{ note._id ? 'Update Note' : 'Save Note'}}"
       class="btn btn-default">
   </div>
 </form>
