--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic|Oxygen:400,300,700">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="/content/app.css" charset="utf-8">
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css">
   </head>
   <body>
 
@@ -32,7 +33,8 @@
     <script src="bower_components/angular-loader/angular-loader.min.js"></script>
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+    <script src="bower_components/angular-flash-alert/dist/angular-flash.js"></script>
     <script src="app.js"></script>
     <script src="notes/notes.js"></script>
     <script src="notes/notes.service.js"></script>
