--- a/app/notes/notes-form.html
+++ b/app/notes/notes-form.html
@@ -22,7 +22,10 @@
     <input
       type="submit"
       name="commit"
-      value="{{ note._id ? 'Update Note' : 'Save Note'}}"
+      value="{{ note._id ? 'Update Note' : 'Create Note'}}"
       class="btn btn-default">
+
+    <a ng-click="delete()" ng-show="note._id"><i class="fa fa-trash-o fa-lg"></i></a>
   </div>
 </form>
+<flash-message duration="3000" show-close="false"></flash-message>
