--- a/app/index.html
+++ b/app/index.html
@@ -8,9 +8,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title ng-bind="$state.current.name + ' - Meganote'">Meganote</title>
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic|Oxygen:400,300,700">
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="/content/app.css" charset="utf-8">
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css">
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="bower_components/textAngular/dist/textAngular.css">
+    <link rel="stylesheet" href="content/app.css" charset="utf-8">
+
   </head>
   <body>
 
@@ -29,14 +31,20 @@
 
 
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="bower_components/angular-loader/angular-loader.min.js"></script>
-    <script src="bower_components/angular/angular.min.js"></script>
-    <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-    <script src="bower_components/angular-flash-alert/dist/angular-flash.js"></script>
-    <script src="app.js"></script>
-    <script src="notes/notes.js"></script>
-    <script src="notes/notes.service.js"></script>
+   <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+   <script src="bower_components/angular-loader/angular-loader.min.js"></script>
+   <script src="bower_components/angular/angular.js"></script>
+   <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+   <script src="bower_components/angular-flash-alert/dist/angular-flash.js"></script>
+   <script src="bower_components/textAngular/dist/textAngular-rangy.min.js"></script>
+   <script src="bower_components/textAngular/dist/textAngular-sanitize.min.js"></script>
+   <script src="bower_components/textAngular/dist/textAngular.min.js"></script>
+
+   <script src="app.js"></script>
+   <script src="notes/notes.js"></script>
+   <script src="notes/notes-form.js"></script>
+   <script src="notes/notes.service.js"></script>
+
+    </script>
   </body>
 </html>
